[package]
name = "kvs"
version = "0.1.0"
authors = ["facd <1484119655@qq.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5.14"
crossbeam-skiplist = "0.1.3"
failure = "0.1.8"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8.0"
slog-term = "2.9.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.0"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "kvs_bench"
harness = false
